--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ img {
     </style>
     <img src="logo.jpeg" alt="logo"> 
     <h1>ABOUT ME</h1>
-<img src="app.png" alt="logo"> 
+<img src="good.png" alt="logo"> 
     <p>NAME: VICTOR SUNDAY ORJIAKOR</p>
     <p>NICKNAME: VICSUN</p>
     <p>LOCATION: NIGERIA ANAMBRA STATE</p>
